--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ python/domoticz.py
 python/googlepubsub.py
 python/reloader.py
 python/script_device_PIRsmarter.py
+python/script_time_test.py
 _domoticz_main
 _domoticz_main.bat
 buienradar_rain_example.pl
