Moved configuration to configfile
Moved configuration from individual files to the config file
and moved the names off switches to the config file as well.

Added a parser in lua for the config file

--- a/scripts.conf
+++ b/scripts.conf
@@ -16,16 +16,45 @@ email="user@example.com"
 baseurl="http://127.0.0.1:8080/json.htm"
 auth=""
 
-#### https://en.wikipedia.org/wiki/Basic_access_authentication
-#The Authorization field is constructed as follows:
-#
-#The username and password are combined with a single colon.
-#The resulting string is encoded using the RFC2045-MIME variant of Base64, except not limited to 76 char/line.
-#The authorization method and a space i.e. "Basic " is then put before the encoded string.
-####
+## https://en.wikipedia.org/wiki/Basic_access_authentication
+##The Authorization field is constructed as follows:
+##
+##The username and password are combined with a single colon.
+##The resulting string is encoded using the RFC2045-MIME variant of Base64, except not limited to 76 char/line.
+##The authorization method and a space i.e. "Basic " is then put before the encoded string.
+
+# Switches in Domoticz
+atHome="Home"
+atSleep="Sleeping"
+eveningLights="Evening lights"
+wakeuplight="Bedroom ceiling"
+windowLights="Window lights"
+carHeater="Car heater"
+
+# Scenes in Domoticz
+eveningLightsScene="Group:Evening lights"
+windowLightsScene="Group:Window lights"
+windowLightsEveningScene="Group:Window lights at evening"
+theRestScene="Group:The rest"
+
+# Temperature in Domoticz
+outsideTemp="Outside"
+
+# Variables in Domoticz
+alarmClock="Alarm clock"
+# Time before alarm the wakeuplight starts. In minutes.
+timeBeforeAlarm="20"
+# Time after alarm the car heater stops. In minutes.
+timeAfterAlarm="45"
+# Then to turn on window lights at morning as a decimal.
+# i.e. to specify 7:30 AM type 7.5
+lightsAtMorning="6"
+# Then to turn off window lights at night as a decimal.
+# i.e. to specify 0:30 AM type 0.5
+lightsAtNight="1"
+
 
 # For Verisure
-##User to login as
 verisurepass="very secret password"
 pin=1234
 ## frequency in seconds for how often to run verisure script
@@ -33,15 +62,8 @@ frequency=720
 
 ##Name to idx mapping for climate devices
 ###Theses are just examples. You have to change them
-climate={
-		'Garage' : '4',
-		'Kitchen' : '5',
-		'Bedroom' : '44'
-		}
+climate={ 'Garage' : '4', 'Kitchen' : '5', 'Bedroom' : '44'	}
 
 ##Smart plug name to serial mapping
 ###Theses are just examples. You have to change them
-sp={
-        'Bedroom window' : 'AA1A AA1A',
-        'Kitchen window' : 'AA2A AA2A'
-        }
+sp={ 'Bedroom window' : 'AA1A AA1A', 'Kitchen window' : 'AA2A AA2A' }
