Turn on lights if it is dark enough
Checks how bright it is in the house and turns on lights if
someone is home.

--- a/scripts.conf
+++ b/scripts.conf
@@ -30,6 +30,7 @@ eveningLights="Evening lights"
 wakeuplight="Bedroom ceiling"
 windowLights="Window lights"
 carHeater="Car heater"
+lightIntensity="Lux meter"
 
 # Scenes in Domoticz
 eveningLightsScene="Group:Evening lights"
@@ -52,7 +53,8 @@ lightsAtMorning="6"
 # Then to turn off window lights at night as a decimal.
 # i.e. to specify 0:30 AM type 0.5
 lightsAtNight="1"
-
+# At what Lux to switch lights on
+switchOnLux="4"
 
 # For Verisure
 verisurepass="very secret password"
