Add function to wake up house at movement in hallway
A motion sesnsor in the hallway sets we house in an awake state
if someone moves in the hallaway.

--- a/scripts.conf
+++ b/scripts.conf
@@ -31,6 +31,7 @@ wakeuplight="Bedroom ceiling"
 windowLights="Window lights"
 carHeater="Car heater"
 lightIntensity="Lux meter"
+pir="PIR hallway"
 
 # Scenes in Domoticz
 eveningLightsScene="Group:Evening lights"
