Cnhange from ascii to utf-8

--- a/scripts.conf
+++ b/scripts.conf
@@ -13,15 +13,7 @@ mailcontent="E-mail to user@example.com:\n\n"
 # Generic
 ## email is used by both verisurescripts and parsemail
 email="user@example.com"
-baseurl="http://127.0.0.1:8080/json.htm"
-auth=""
-
-## https://en.wikipedia.org/wiki/Basic_access_authentication
-##The Authorization field is constructed as follows:
-##
-##The username and password are combined with a single colon.
-##The resulting string is encoded using the RFC2045-MIME variant of Base64, except not limited to 76 char/line.
-##The authorization method and a space i.e. "Basic " is then put before the encoded string.
+baseurl="https://example.com/json.htm?username=<base64enc username>&password=<base64enc passwd>&"
 
 # Switches in Domoticz
 atHome="Home"
